--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,9 @@ dependencies:
     sdk: flutter
 
   get: ^4.6.5
-  firebase_core: ^1.18.0
   google_fonts: ^3.0.1
+  firebase_core: ^1.18.0
+  firebase_auth: ^3.3.20
 
 dev_dependencies:
   flutter_test:
