--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   get: ^4.6.5
   firebase_core: ^1.18.0
   firebase_auth: ^3.3.20
+  google_sign_in: ^5.3.3
   google_fonts: ^3.0.1
   curved_navigation_bar: ^1.0.3
 
