--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^1.18.0
   firebase_auth: ^3.3.20
   google_sign_in: ^5.3.3
+  flutter_foreground_task: ^3.9.0
   google_fonts: ^3.0.1
   curved_navigation_bar: ^1.0.3
   percent_indicator: ^4.2.2
