--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^3.0.1
   curved_navigation_bar: ^1.0.3
   percent_indicator: ^4.2.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
