major changes, source cleanup - starting v2.0 preparing for future v2.0 with a major cleanup and upcoming changes: switch directory structure from MVC to Feature Folders architecture. switch state from GetX to Riverpod. proper app routing using go_router. split logic from UI, remodel, add necessary tests.

--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,5 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-# My ignores
-lib/constants/firebase_options.dart
+# Ignores
+lib/src/constants/firebase_options.dart
