--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_riverpod: ^1.0.0
+  go_router: ^7.1.1
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.4
   google_sign_in: ^5.3.3
