adding fg task stop goal trackers button, upgrading some major packages

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:value="2" />
 
         <!-- Foreground service task -->
-        <service android:name="com.pravera.flutter_foreground_task.service.ForegroundService" />
+        <service android:name="com.pravera.flutter_foreground_task.service.ForegroundService" android:stopWithTask="true"/>
 
     </application>
 </manifest>
