--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   percent_indicator: ^4.2.2
   intl: ^0.19.0
+  flutter_rating_bar: ^4.0.1
 
   wheel_picker: ^0.0.4
 
