--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   percent_indicator: ^4.2.2
   intl: ^0.19.0
   flutter_rating_bar: ^4.0.1
+  path_provider: ^2.1.2
+  image_picker: ^1.0.7
 
   wheel_picker: ^0.0.4
 
