--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   path_provider: ^2.1.2
   image_picker: ^1.0.7
+  
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.13
 
   wheel_picker: ^0.0.4
 
